--- a/test/test1.html
+++ b/test/test1.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset='utf-8'>
     <script type="text/javascript" src='../src/js/lib/jquery.min.js'></script>
-	
+	<script type="text/javascript" src="cssAnimation.js"></script>
 </head>
 <style id="style" type="text/css">
 	div
@@ -22,10 +22,27 @@
         }
 </style>
 <body>
-	<div>
-		
-	</div>
+	<div class="div"></div>
 </body>
 </html>
 
-<script type="text/javascript" src='./test1.js'></script>
+<script>
+    $('.div').cssAnimation({
+        time: 2000,
+        delay: 0,
+        timing: [0.68, -0.55, 0.27, 1.55],//'ease-out',
+        css: {
+            width: '150',
+            height: '150',
+            'background-color': 'blue',
+            opacity: 1,
+            translate: ['200', 200],//上下、左右、前后 || 不带单位默认为px  || TODO 一个参数时，不在3D属性
+            rotate: [.6, 1, .6, '80deg'],//
+            skew: [-15, -15],
+            scale: [2, 2],
+            origin: ['30', '30']
+        },
+        repe: false,//重复动画
+    });
+</script>
+<!--<script type="text/javascript" src='./test1.js'></script>-->
