--- a/src/html/index.html
+++ b/src/html/index.html
@@ -24,6 +24,7 @@
         <div class="lazy2" style="">
             <div class="on">on1</div>
             <div class="on">on2</div>
+            <div class="_on">_on1</div>
         </div>
 
 
@@ -50,18 +51,7 @@
 </html>
 <script>
 
-    $('.detection').on('click', function() {
-        $.sdDetection();
-    })
-    $('.add').on('click', function() {
-        $('.lazy2').append('<div class="on">on2</div>');
-    });
-    $('.timestram').on('click', function() {
-        $.sdScroll();
-    });
-
-
-    $('.lazy2')._on({
+    $(document)._on({
         time: 2000,
         delay: 0,
         ease: 'linear',//'ease-out',
@@ -80,6 +70,57 @@
         repe: false,
         normal: false//正常模式
     }, '.on');
+
+    $(document)._on({
+        time: 2000,
+        delay: 0,
+        ease: 'linear',//'ease-out',
+        css: {
+//            width: '40',
+//            height: '20',
+            'background-color': 'blue',
+            opacity: 1,
+            translate: ['300', 0],//上下、左右、前后 || 不带单位默认为px  || TODO 一个参数时，不在3D属性
+//            rotate: [.6, 1, .6, '80deg'],//
+//            skew: [-15, -15],
+//            scale: [1.1, 1.1],
+            origin: ['30', '30']
+        },
+        lazy: true,
+        repe: false,
+        normal: false//正常模式
+    }, '._on');
+
+    $('.detection').on('click', function() {
+        $.sdDetection();
+    })
+    $('.add').on('click', function() {
+        $('.lazy2').append('<div class="on">on2</div>');
+    });
+    $('.timestram').on('click', function() {
+        $.sdScroll();
+    });
+//
+//
+//    $('.lazy2')._on({
+//        time: 2000,
+//        delay: 0,
+//        ease: 'linear',//'ease-out',
+//        css: {
+////            width: '40',
+////            height: '20',
+//            'background-color': 'blue',
+//            opacity: 1,
+//            translate: ['0', 300],//上下、左右、前后 || 不带单位默认为px  || TODO 一个参数时，不在3D属性
+////            rotate: [.6, 1, .6, '80deg'],//
+////            skew: [-15, -15],
+////            scale: [1.1, 1.1],
+//            origin: ['30', '30']
+//        },
+//        lazy: true,
+//        repe: false,
+//        normal: false//正常模式
+//    }, '.on');
 
 
 
