--- a/src/html/index.html
+++ b/src/html/index.html
@@ -115,7 +115,7 @@
         $.sdDetection();
     })
     $('.add').on('click', function() {
-        $('.lazy2').append('<div class="on">on2</div>');
+        $('.lazy2').append('<div class=".lazy1">on2</div>');
     });
     $('.timestram').on('click', function() {
         $.sdScroll();
@@ -144,25 +144,25 @@
 
 
 
-//    $('.lazy1')._animation({
-//        time: 2000,
-//        delay: 0,
-//        ease: 'ease-back',//'ease-out',
-//        css: {
-//            width: '150',
-//            height: '150',
-//            'background-color': 'blue',
-//            opacity: 1,
-//            translate: ['200', 200],//上下、左右、前后 || 不带单位默认为px  || TODO 一个参数时，不在3D属性
-////            rotate: [.6, 1, .6, '80deg'],//
-//            skew: [-15, -15],
-////            scale: [2, 2],
-////            origin: ['30', '30']
-//        },
-//        lazy: true,
-//        repe: false,
-//        normal: false
-//    });
+    $('.lazy1')._animation({
+        time: 2000,
+        delay: 0,
+        ease: 'ease-back',//'ease-out',
+        css: {
+            width: '150',
+            height: '150',
+            'background-color': 'blue',
+            opacity: 1,
+            translate: ['200', 200],//上下、左右、前后 || 不带单位默认为px  || TODO 一个参数时，不在3D属性
+//            rotate: [.6, 1, .6, '80deg'],//
+            skew: [-15, -15],
+//            scale: [2, 2],
+//            origin: ['30', '30']
+        },
+        lazy: true,
+        repe: false,
+        normal: true
+    });
 
     /*
         $.sdGroup(group,options);
