整理发布1.1版本

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -3,7 +3,7 @@
 	<head>
         <meta charset="UTF-8">
         <script src="../js/lib/jquery.min.js"></script>
-        <script src="../js/src/animation.js"></script>
+        <script src="../js/src/jpro.js"></script>
 <!--        <script src="../js/src/storage.js"></script>-->
 <!--        <script src="../js/src/lazy.js"></script>-->
 <!--        <script src="../js/src/cssAnimation.js"></script>-->
@@ -50,6 +50,10 @@
 	</body>
 </html>
 <script>
+
+
+
+
 
     $(document)._on({
         time: 2000,
